--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -165,30 +165,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002\" ><caption>Log of the Soil movement</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row0_col1\" class=\"data row0 col1\" >Soil movement</td>\n",
-       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:15:42.824591</td>\n",
-       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row1_col1\" class=\"data row1 col1\" >Soil movement</td>\n",
-       "                        <td id=\"T_1ac91860_19c5_11eb_bac9_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>Soil movement</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1970-01-01 00:15:42.824591</td>\n",
+       "      <td>Soil movement</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb21c931c18>"
+       "                   Timestamp       Activity ActivityState\n",
+       "0 1970-01-01 00:00:00.000000  Soil movement         START\n",
+       "1 1970-01-01 00:15:42.824591  Soil movement          STOP"
       ]
      },
      "metadata": {},
@@ -197,28 +223,60 @@
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002\" ><caption>Log of the Hopper 01</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Timestamp</th>        <th class=\"col_heading level0 col1\" >Activity</th>        <th class=\"col_heading level0 col2\" >ActivityState</th>        <th class=\"col_heading level0 col3\" >geometry</th>        <th class=\"col_heading level0 col4\" >container level</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                        <th id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col0\" class=\"data row0 col0\" >1970-01-01 00:00:00</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col1\" class=\"data row0 col1\" >Soil movement</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col2\" class=\"data row0 col2\" >START</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col3\" class=\"data row0 col3\" >POINT (4.18055556 52.18664444)</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row0_col4\" class=\"data row0 col4\" >0.000000</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                        <th id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col0\" class=\"data row1 col0\" >1970-01-01 00:15:42.824591</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col1\" class=\"data row1 col1\" >Soil movement</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col2\" class=\"data row1 col2\" >STOP</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col3\" class=\"data row1 col3\" >POINT (4.25222222 52.11428333)</td>\n",
-       "                        <td id=\"T_1aca6756_19c5_11eb_bac9_0242ac140002row1_col4\" class=\"data row1 col4\" >0.000000</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>ActivityState</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>container level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>Soil movement</td>\n",
+       "      <td>START</td>\n",
+       "      <td>POINT (4.18055556 52.18664444)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1970-01-01 00:15:42.824591</td>\n",
+       "      <td>Soil movement</td>\n",
+       "      <td>STOP</td>\n",
+       "      <td>POINT (4.25222222 52.11428333)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb21c931f28>"
+       "                   Timestamp       Activity ActivityState  \\\n",
+       "0 1970-01-01 00:00:00.000000  Soil movement         START   \n",
+       "1 1970-01-01 00:15:42.824591  Soil movement          STOP   \n",
+       "\n",
+       "                         geometry  container level  \n",
+       "0  POINT (4.18055556 52.18664444)              0.0  \n",
+       "1  POINT (4.25222222 52.11428333)              0.0  "
       ]
      },
      "metadata": {},
