--- a/notebooks/05_WhileActivity.ipynb
+++ b/notebooks/05_WhileActivity.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: WhileActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## model.WhileActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook provides an example of while activity. The while activity executes **sub_processes** until a **condition_event** is fulfilled. The condition event can be formulated based on the expression language documented in the project. "
+    "This notebook provides an example of OpenCLSim's __model.WhileActivity__. The while activity executes **sub_processes** until a **condition_event** is fulfilled. The condition event can be formulated based on the expression language documented in the project. "
    ]
   },
   {
@@ -1329,7 +1318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1343,7 +1332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
