--- a/notebooks/06_RepeatActivity.ipynb
+++ b/notebooks/06_RepeatActivity.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: RepeatActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## model.RepeatActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook provides an example of a repeat activity. The repeat activity repeats a set of sub processes a given number of times."
+    "This notebook provides an example of OpenCLSim's __model.RepeatActivity__. The repeat activity repeats a set of __sub_processes__ a given number of times."
    ]
   },
   {
@@ -1325,7 +1314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1339,7 +1328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
