--- a/notebooks/08_ParallelActivity.ipynb
+++ b/notebooks/08_ParallelActivity.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: ParallelActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## model.ParallelActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook provides an example of a parallel activity. The parallel activity initiate a set of sub processes simultaneously."
+    "This notebook provides an example of OpenCLSim's __model.ParallelActivity__. The parallel activity initiate a set of __sub_processes__ simultaneously."
    ]
   },
   {
@@ -1655,7 +1644,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1669,7 +1658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
