--- a/notebooks/07_WhileActivity_with_ShiftAmount.ipynb
+++ b/notebooks/07_WhileActivity_with_ShiftAmount.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: WhileActivity with ShiftAmountActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## WhileActivity with ShiftAmountActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "The combination of a while activity with a shift amount activity can be used to represent the loading or unloading of a vessel, where coordination of the process is represented on the granularity of the amount shifted in one iteration. In this particular example we define the time it takes to shift an amount of 1, and define a while activity that executes this activity until the vessel container is full."
+    "The combination of a __model.WhileActivity__ with a __model.ShiftAmountActivity__ can be used to represent the loading or unloading of a vessel, where coordination of the process is represented on the granularity of the amount shifted in one iteration. In this particular example we define the time it takes to shift an amount of 1, and define a WhileActivity that executes this activity until the vessel container is full."
    ]
   },
   {
@@ -28,10 +17,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import datetime, time\n",
     "import simpy\n",
@@ -218,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We execute the sub process (shift amount) until the container of vessel01 is full."
+    "We execute the __sub_processes__ (i.c. ShiftAmount) until the container of __vessel01__ is __full__."
    ]
   },
   {
@@ -1804,7 +1791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sandbox"
+    "##### 5.3 Inspect objects"
    ]
   },
   {
@@ -1857,7 +1844,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1871,7 +1858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
