--- a/notebooks/14_SingleRun.ipynb
+++ b/notebooks/14_SingleRun.ipynb
@@ -4,22 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: repeating a subcycle until a stop condition is triggered\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## RepeatActivity with stop condition\n",
     "\n",
-    "----\n",
+    "This notebook provides an example of a simulation that takes a number of __sub_processes__, grouped in a __SequentialActivity__, that is executed in a __WhileActivity__ while a __stop condition__ is not yet met.\n",
     "\n",
-    "This notebook provides an example of a simulation that takes a number of sub processes, grouped in a sequential activity, that is **executed while a stop condition is not yet met**.\n",
-    "\n",
-    "For this example we work with the following sub processes:\n",
+    "For this example we work with the following __sub_processes__:\n",
     "* sailing empty\n",
     "* loading\n",
     "* sailing full\n",
@@ -5732,7 +5721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5746,7 +5735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
